feat: implementa autenticación JWT y configuración de seguridad en Spring Boot